--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,12 +2,20 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: A clone of a Postgres app database.
     database: dbt-fundamentals-341902
-
     schema: raw
     tables:
       - name: src_customers      
+        description: Raw customer data
+        columns:
+          - name: id
+            description: Primary key for  customer data.
       - name: src_orders
+        description: Raw orders data
+        columns:
+          - name: id
+            description: Primary key for orders data.
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: {count: 12, period: hour}
